--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -117,7 +117,7 @@
                 <child>
                   <widget class="GtkVPaned" id="vpaned1">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
+                    <property name="can_focus">False</property>
                     <child>
                       <widget class="GtkScrolledWindow" id="sw_generalOutput">
                         <property name="can_focus">True</property>
@@ -129,6 +129,7 @@
                             <property name="editable">False</property>
                             <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                             <property name="cursor_visible">False</property>
+							<property name="can_focus">False</property>
                           </widget>
                         </child>
                       </widget>
