--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -124,6 +124,7 @@
                         <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                         <child>
                           <widget class="GtkTextView" id="generalOutput">
+						    <property name="can_focus">False</property>
                             <property name="visible">True</property>
                             <property name="editable">False</property>
                             <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
