Hopefully fixed "start tekka to fast"-bug Fixed focus AGAIN AGAIN AGAIN >.<

--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -142,6 +142,7 @@
                         <child>
                           <widget class="GtkTextView" id="generalOutput">
                             <property name="visible">True</property>
+                            <property name="can_focus">False</property>
                             <property name="editable">False</property>
                             <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                             <property name="cursor_visible">False</property>
@@ -235,6 +236,7 @@
                     <child>
                       <widget class="GtkTreeView" id="tekkaNicklist">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="headers_clickable">True</property>
                         <signal name="button_press_event" handler="tekkaNicklist_button_press_event_cb"/>
                         <signal name="row_activated" handler="tekkaNicklist_row_activated_cb"/>
