--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.3 on Mon Jun  9 15:04:51 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Jun 15 20:56:34 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="tekkaMainwindow">
     <property name="width_request">550</property>
@@ -134,19 +134,35 @@
                   <widget class="GtkVPaned" id="vpaned1">
                     <property name="visible">True</property>
                     <child>
-                      <widget class="GtkScrolledWindow" id="sw_generalOutput">
-                        <property name="height_request">120</property>
-                        <property name="can_focus">True</property>
-                        <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                      <widget class="GtkFrame" id="frame_generalOutput">
+                        <property name="visible">True</property>
+                        <property name="label_xalign">0</property>
                         <child>
-                          <widget class="GtkTextView" id="generalOutput">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="editable">False</property>
-                            <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
-                            <property name="cursor_visible">False</property>
+                          <widget class="GtkScrolledWindow" id="sw_generalOutput">
+                            <property name="height_request">120</property>
+                            <property name="can_focus">True</property>
+                            <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                            <child>
+                              <widget class="GtkTextView" id="generalOutput">
+                                <property name="visible">True</property>
+								<property name="can_focus">False</property>
+                                <property name="editable">False</property>
+                                <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
+                                <property name="cursor_visible">False</property>
+                              </widget>
+                            </child>
                           </widget>
+                        </child>
+                        <child>
+                          <widget class="GtkLabel" id="label3">
+                            <property name="visible">True</property>
+                            <property name="label" translatable="yes">&lt;b&gt;Global Output&lt;/b&gt;</property>
+                            <property name="use_markup">True</property>
+                          </widget>
+                          <packing>
+                            <property name="type">label_item</property>
+                          </packing>
                         </child>
                       </widget>
                       <packing>
@@ -155,20 +171,33 @@
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkScrolledWindow" id="sw_output">
+                      <widget class="GtkFrame" id="frame3">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                        <property name="window_placement">GTK_CORNER_BOTTOM_LEFT</property>
-                        <property name="window_placement_set">True</property>
+                        <property name="label_xalign">0</property>
                         <child>
-                          <widget class="GtkTextView" id="tekkaOutput">
+                          <widget class="GtkScrolledWindow" id="sw_output">
                             <property name="visible">True</property>
-                            <property name="editable">False</property>
-                            <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
-                            <property name="cursor_visible">False</property>
+                            <property name="can_focus">False</property>
+                            <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+                            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                            <property name="window_placement">GTK_CORNER_BOTTOM_LEFT</property>
+                            <property name="window_placement_set">True</property>
+                            <child>
+                              <widget class="GtkTextView" id="tekkaOutput">
+                                <property name="visible">True</property>
+								<property name="can_focus">False</property>
+                                <property name="editable">False</property>
+                                <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
+                                <property name="cursor_visible">False</property>
+                              </widget>
+                            </child>
                           </widget>
+                        </child>
+                        <child>
+                          <placeholder/>
+                          <packing>
+                            <property name="type">label_item</property>
+                          </packing>
                         </child>
                       </widget>
                       <packing>
@@ -211,14 +240,30 @@
                 <property name="can_focus">True</property>
                 <property name="position_set">True</property>
                 <child>
-                  <widget class="GtkScrolledWindow" id="sw_servertree">
-                    <property name="height_request">180</property>
+                  <widget class="GtkFrame" id="frame2">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                    <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                    <property name="label_xalign">0</property>
                     <child>
-                      <placeholder/>
+                      <widget class="GtkScrolledWindow" id="sw_servertree">
+                        <property name="height_request">180</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <child>
+                          <placeholder/>
+                        </child>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label2">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Servertree&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                      </widget>
+                      <packing>
+                        <property name="type">label_item</property>
+                      </packing>
                     </child>
                   </widget>
                   <packing>
@@ -227,20 +272,36 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkScrolledWindow" id="scrolledwindow3">
-                    <property name="width_request">180</property>
+                  <widget class="GtkFrame" id="frame1">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                    <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                    <property name="label_xalign">0</property>
                     <child>
-                      <widget class="GtkTreeView" id="tekkaNicklist">
+                      <widget class="GtkScrolledWindow" id="scrolledwindow3">
+                        <property name="width_request">180</property>
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="headers_clickable">True</property>
-                        <signal name="button_press_event" handler="tekkaNicklist_button_press_event_cb"/>
-                        <signal name="row_activated" handler="tekkaNicklist_row_activated_cb"/>
+                        <property name="can_focus">True</property>
+                        <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <child>
+                          <widget class="GtkTreeView" id="tekkaNicklist">
+                            <property name="visible">True</property>
+							<property name="can_focus">False</property>
+                            <property name="headers_clickable">True</property>
+                            <signal name="button_press_event" handler="tekkaNicklist_button_press_event_cb"/>
+                            <signal name="row_activated" handler="tekkaNicklist_row_activated_cb"/>
+                          </widget>
+                        </child>
                       </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label1">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Nicklist&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                      </widget>
+                      <packing>
+                        <property name="type">label_item</property>
+                      </packing>
                     </child>
                   </widget>
                   <packing>
