--- a/mainwindow.glade
+++ b/mainwindow.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Jun 15 23:04:47 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Jun 15 23:24:28 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="tekkaMainwindow">
     <property name="width_request">800</property>
@@ -119,7 +119,6 @@
               <widget class="GtkVBox" id="outputVbox">
                 <property name="width_request">600</property>
                 <property name="visible">True</property>
-		<property name="can_focus">False</property>
                 <property name="border_width">12</property>
                 <property name="spacing">12</property>
                 <child>
@@ -146,7 +145,6 @@
                         <child>
                           <widget class="GtkTextView" id="generalOutput">
                             <property name="visible">True</property>
-			    <property name="can_focus">False</property>
                             <property name="editable">False</property>
                             <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                             <property name="cursor_visible">False</property>
@@ -169,8 +167,8 @@
                         <child>
                           <widget class="GtkTextView" id="tekkaOutput">
                             <property name="visible">True</property>
-			    <property name="can_focus">False</property>
                             <property name="editable">False</property>
+							<property name="can_focus">False</property>
                             <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                             <property name="cursor_visible">False</property>
                           </widget>
@@ -205,7 +203,7 @@
                 </child>
               </widget>
               <packing>
-                <property name="resize">False</property>
+                <property name="resize">True</property>
                 <property name="shrink">False</property>
               </packing>
             </child>
@@ -213,7 +211,6 @@
               <widget class="GtkVPaned" id="listVbox">
                 <property name="width_request">200</property>
                 <property name="visible">True</property>
-		<property name="can_focus">False</property>
                 <property name="border_width">12</property>
                 <property name="position_set">True</property>
                 <child>
@@ -243,7 +240,7 @@
                     <child>
                       <widget class="GtkTreeView" id="tekkaNicklist">
                         <property name="visible">True</property>
-			<property name="can_focus">False</property>
+						<property name="can_focus">False</property>
                         <property name="headers_clickable">True</property>
                         <signal name="button_press_event" handler="tekkaNicklist_button_press_event_cb"/>
                         <signal name="row_activated" handler="tekkaNicklist_row_activated_cb"/>
