--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -201,6 +201,7 @@
 							<property name="can_focus">False</property>
                             <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                             <property name="cursor_visible">False</property>
+							<signal name="button_press_event" handler="output_button_press_event_cb"/>
                           </widget>
                         </child>
                       </widget>
