--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -260,7 +260,7 @@
 						<property name="can_focus">False</property>
                         <property name="headers_clickable">True</property>
                         <signal name="row_activated" handler="serverTree_row_activated_cb"/>
-                        <signal name="button_press_event" handler="serverTree_button_press_event_cb"/>
+                        <signal name="button_press_event" handler="serverTree_button_press_event_cb"/>                      
 					  </widget>
                     </child>
                   </widget>
@@ -348,6 +348,14 @@
       </widget>
     </child>
     <child>
+      <widget class="GtkMenuItem" id="whoisItem">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Whois</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="whoisItem_activate_cb"/>
+      </widget>
+	</child>
+    <child>
       <widget class="GtkMenuItem" id="modesItem">
         <property name="visible">True</property>
         <property name="label" translatable="yes">Modes</property>
@@ -416,7 +424,7 @@
   </widget>
   <widget class="GtkMenu" id="serverTree_tabMenu">
     <property name="visible">True</property>
-	<signal name="deactivate" handler="tabMenu_deactivate_cb"/>
+    <signal name="deactivate" handler="tabMenu_deactivate_cb"/>	
 	<child>
 	  <widget class="GtkSeparatorMenuItem" id="separatorItem">
 	    <property name="visible">True</property>
