--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -244,7 +244,7 @@
 					<child>
 						<widget class="GtkLabel" id="nickLabel">
 							<property name="visible">True</property>
-							<property name="label">&lt;NICKNAME&gt;</property>
+							<property name="label"></property>
 						</widget>
 						<packing>
 							<property name="expand">False</property>
