--- a/glade/dialogs.glade
+++ b/glade/dialogs.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Sep  8 02:25:41 2008 -->
+<!--Generated with glade3 3.4.5 on Mon Sep  8 20:21:52 2008 -->
 <glade-interface>
   <widget class="GtkDialog" id="serverDialog">
     <property name="border_width">6</property>
@@ -680,8 +680,8 @@ Are you sure you want to delete the server?</property>
     </child>
   </widget>
   <widget class="GtkDialog" id="serverList">
-    <property name="border_width">5</property>
-    <property name="title">Channel List</property>
+    <property name="border_width">6</property>
+    <property name="title" translatable="yes">Channel List</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="default_width">400</property>
     <property name="default_height">300</property>
