Implemented the ability to have plugins. The API is simple:   * __init__()     => called after plugin load   * __destruct__() => called after plugin unload   * pluginInfo()   => returns a tuple: (description, version);                       both values are strings   * registerCommand(command, callback) => registers a command if it does not                                           exist   * getDBusInterface() => returns a object similar to the dbus.Interface   * setOption(option, value) => sets the option in the config section of the plugin                                 to value   * getOption(option)        => returns the value of the option from the config section                                 of the plugin

--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -133,6 +133,14 @@
 						<signal name="activate" handler="menu_Dialogs_channelList_activate_cb"/>
 					  </widget>
 					</child>
+					<child>
+					  <widget class="GtkMenuItem" id="menu_Dialogs_plugins">
+					  	<property name="visible">True</property>
+						<property name="label" translatable="yes">Plugins</property>
+						<property name="use_underline">True</property>
+						<signal name="activate" handler="menu_Dialogs_plugins_activate_cb"/>
+					  </widget>
+					</child>
 				  </widget>
 				</child>
 			</widget>
