--- a/glade/dialogs.glade
+++ b/glade/dialogs.glade
@@ -780,7 +780,9 @@ Are you sure you want to delete the server?</property>
     </child>
   </widget>
   <widget class="GtkDialog" id="plugins">
-    <property name="border_width">5</property>
+    <property name="border_width">6</property>
+	<property name="default_width">400</property>
+    <property name="default_height">300</property>
     <property name="title" translatable="yes">Plugins</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
