--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -141,6 +141,14 @@
                         <signal name="activate" handler="menu_Dialogs_plugins_activate_cb"/>
                       </widget>
                     </child>
+					<child>
+					  <widget class="GtkMenuItem" id="menu_Dialogs_history">
+					    <property name="visible">True</property>
+						<property name="label" translatable="yes">History</property>
+						<property name="use_underline">True</property>
+						<signal name="activate" handler="menu_Dialogs_history_activate_cb"/>
+					  </widget>
+					</child>
                   </widget>
                 </child>
               </widget>
