--- a/glade/dialogs.glade
+++ b/glade/dialogs.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Wed Sep 10 02:38:32 2008 -->
+<!--Generated with glade3 3.4.5 on Wed Sep 10 15:54:16 2008 -->
 <glade-interface>
   <widget class="GtkDialog" id="serverDialog">
     <property name="border_width">6</property>
@@ -797,6 +797,7 @@ Are you sure you want to delete the server?</property>
             <property name="can_focus">True</property>
             <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
             <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+            <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
             <child>
               <widget class="GtkTreeView" id="pluginView">
                 <property name="visible">True</property>
@@ -863,6 +864,7 @@ Are you sure you want to delete the server?</property>
     <property name="width_request">550</property>
     <property name="height_request">300</property>
     <property name="border_width">6</property>
+    <property name="title" translatable="yes">History</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="has_separator">False</property>
@@ -907,6 +909,7 @@ Are you sure you want to delete the server?</property>
                 <property name="border_width">6</property>
                 <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
                 <child>
                   <widget class="GtkTextView" id="historyView">
                     <property name="visible">True</property>
