Moved history dialog from Dialogs -> History to tab_menu->History

--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -141,14 +141,6 @@
                         <signal name="activate" handler="menu_Dialogs_plugins_activate_cb"/>
                       </widget>
                     </child>
-					<child>
-					  <widget class="GtkMenuItem" id="menu_Dialogs_history">
-					    <property name="visible">True</property>
-						<property name="label" translatable="yes">History</property>
-						<property name="use_underline">True</property>
-						<signal name="activate" handler="menu_Dialogs_history_activate_cb"/>
-					  </widget>
-					</child>
                   </widget>
                 </child>
               </widget>
@@ -526,6 +518,14 @@
         <signal name="activate" handler="partItem_activate_cb"/>
       </widget>
     </child>
+	<child>
+	  <widget class="GtkMenuItem" id="historyItem">
+	    <property name="visible">True</property>
+		<property name="label" translatable="yes">History</property>
+		<property name="use_underline">True</property>
+		<signal name="activate" handler="historyItem_activate_cb"/>
+	  </widget>
+	</child>
     <child>
       <widget class="GtkMenuItem" id="closeItem">
         <property name="visible">True</property>
