--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -317,26 +317,46 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkScrolledWindow" id="scrolledWindow_nickList">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                    <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                    <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
-                    <child>
-                      <widget class="GtkTreeView" id="nickList">
+				  <widget class="GtkVBox" id="VBox_nickList">
+					<property name="visible">True</property>
+                    <property name="border_width">6</property>
+                    <property name="spacing">6</property>
+					<child>
+				      <widget class="GtkLabel" id="nickList_label">
+					    <property name="visible">True</property>
+						<property name="label" translatable="yes">User: 0 Operator: 0</property>
+					  </widget>
+					  <packing>
+					    <property name="expand">False</property>
+						<property name="fill">True</property>
+					  </packing>
+				    </child>
+				    <child>
+                      <widget class="GtkScrolledWindow" id="scrolledWindow_nickList">
                         <property name="visible">True</property>
-						<property name="can_focus">False</property>
-                        <property name="headers_clickable">True</property>
-                        <signal name="button_press_event" handler="nickList_button_press_event_cb"/>
-                        <signal name="row_activated" handler="nickList_row_activated_cb"/>
+                        <property name="can_focus">False</property>
+                        <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
+                        <child>
+                          <widget class="GtkTreeView" id="nickList">
+                            <property name="visible">True</property>
+				  		    <property name="can_focus">False</property>
+                            <property name="headers_clickable">True</property>
+                            <signal name="button_press_event" handler="nickList_button_press_event_cb"/>
+                            <signal name="row_activated" handler="nickList_row_activated_cb"/>
+                          </widget>
+                        </child>
                       </widget>
-                    </child>
-                  </widget>
-                  <packing>
-                    <property name="resize">True</property>
-                    <property name="shrink">True</property>
-                  </packing>
+                      <packing>
+					  <!-- TODO: packing -->
+                      </packing>
+					</child>
+				  </widget>
+				  <packing>
+				    <property name="resize">False</property>
+				    <property name="shrink">False</property>
+				  </packing>
                 </child>
               </widget>
               <packing>
