--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -317,19 +317,22 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkVBox" id="VBox_nickList">
-                    <property name="visible">True</property>
-                    <property name="border_width">6</property>
-                    <property name="spacing">6</property>
-                    <child>
-                      <widget class="GtkLabel" id="nickList_label">
-                        <property name="visible">True</property>
-                      </widget>
-                      <packing>
-                        <property name="expand">False</property>
-                      </packing>
-                    </child>
-                    <child>
+				  <widget class="GtkVBox" id="VBox_nickList">
+					<property name="visible">True</property>
+                    <property name="border_width">0</property>
+                    <property name="spacing">5</property>
+					<child>
+				      <widget class="GtkLabel" id="nickList_label">
+					    <property name="visible">True</property>
+						<property name="label" translatable="yes">User: 0 Operator: 0</property>
+					  </widget>
+					  <packing>
+					  	<property name="padding">2</property>
+					    <property name="expand">False</property>
+						<property name="fill">True</property>
+					  </packing>
+				    </child>
+				    <child>
                       <widget class="GtkScrolledWindow" id="scrolledWindow_nickList">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -347,7 +350,8 @@
                         </child>
                       </widget>
                       <packing>
-                        <property name="position">1</property>
+					  	<property name="expand">True</property>
+						<property name="fill">True</property>
                       </packing>
                     </child>
                   </widget>
