--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Tue Sep  9 02:48:54 2008 -->
+<!--Generated with glade3 3.4.5 on Thu Sep 11 14:30:04 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="mainWindow">
     <property name="width_request">800</property>
@@ -317,21 +317,19 @@
                   </packing>
                 </child>
                 <child>
-				  <widget class="GtkVBox" id="VBox_nickList">
-					<property name="visible">True</property>
+                  <widget class="GtkVBox" id="VBox_nickList">
+                    <property name="visible">True</property>
                     <property name="border_width">6</property>
                     <property name="spacing">6</property>
-					<child>
-				      <widget class="GtkLabel" id="nickList_label">
-					    <property name="visible">True</property>
-						<property name="label" translatable="yes">User: 0 Operator: 0</property>
-					  </widget>
-					  <packing>
-					    <property name="expand">False</property>
-						<property name="fill">True</property>
-					  </packing>
-				    </child>
-				    <child>
+                    <child>
+                      <widget class="GtkLabel" id="nickList_label">
+                        <property name="visible">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                      </packing>
+                    </child>
+                    <child>
                       <widget class="GtkScrolledWindow" id="scrolledWindow_nickList">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -349,14 +347,14 @@
                         </child>
                       </widget>
                       <packing>
-					  <!-- TODO: packing -->
+                        <property name="position">1</property>
                       </packing>
-					</child>
-				  </widget>
-				  <packing>
-				    <property name="resize">False</property>
-				    <property name="shrink">False</property>
-				  </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="resize">False</property>
+                    <property name="shrink">False</property>
+                  </packing>
                 </child>
               </widget>
               <packing>
@@ -538,14 +536,14 @@
         <signal name="activate" handler="partItem_activate_cb"/>
       </widget>
     </child>
-	<child>
-	  <widget class="GtkMenuItem" id="historyItem">
-	    <property name="visible">True</property>
-		<property name="label" translatable="yes">History</property>
-		<property name="use_underline">True</property>
-		<signal name="activate" handler="historyItem_activate_cb"/>
-	  </widget>
-	</child>
+    <child>
+      <widget class="GtkMenuItem" id="historyItem">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">History</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="historyItem_activate_cb"/>
+      </widget>
+    </child>
     <child>
       <widget class="GtkMenuItem" id="closeItem">
         <property name="visible">True</property>
